# PROI-project-2

./: CMakeLists.txt  README.md
PROI-project-2/: CMakeLists.txt  Makefile  zad-3.cpp
PROI-project-2/include/: Child.hpp  Customer.hpp  Man.hpp  Menus.hpp  Queue.hpp  Show.hpp  Woman.hpp  err_struct.hpp  theater.hpp
PROI-project-2/src/: Child.cpp  Customer.cpp  Man.cpp  Menus.cpp  Show.cpp  Woman.cpp  err_struct.cpp  main.cpp  theater.cpp
PROI-project-2/test/: test.cpp  test1.cpp  test2.cpp
include/: Child.hpp  Customer.hpp  Man.hpp  Menus.hpp  Queue.hpp  Show.hpp  err_struct.hpp
spike/: queueTest1.cpp
src/: Menus.cpp  Show.cpp
test/: Customer_Suite.cpp  Main_Test.cpp  Menus_Suite.cpp  Show_Suite.cpp  test.cpp
